--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <title>猜词游戏</title>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 2em; background-color: #f4f4f4; transition: background-color 0.5s; }
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 2em;
+      background-color: #f4f4f4;
+    }
     h1 { font-size: 2em; margin-bottom: 1em; }
     #word { font-size: 2.5em; margin: 1em; }
     #team, #score, #timer, #playerList { margin: 0.5em; font-size: 1.2em; }
     button { padding: 1em 2em; font-size: 1em; margin: 0.5em; }
     #word.hidden { color: #999; }
-    #results { margin-top: 2em; padding: 1em; border-top: 2px solid #ccc; text-align: left; max-width: 600px; margin-left: auto; margin-right: auto; display: none; background: #fff; border-radius: 8px; }
-    .winner { font-size: 1.5em; margin-bottom: 1em; font-weight: bold; }
   </style>
 </head>
 <body>
@@ -21,17 +24,18 @@
   <div id="timer">Таймер: </div>
   <div id="playerList">Игроки: </div>
   <div id="word" class="hidden">Ожидание...</div>
+  <div id="results"></div>
   <div id="buttons">
     <button id="startBtn">开始解释</button>
     <button id="correctBtn" disabled>Угадали</button>
     <button id="skipBtn" disabled>Пропустить</button>
     <button id="restartBtn">🔁 Начать заново</button>
   </div>
-  <div id="results"></div>
 
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script>
-    const socket = io("http://localhost:3000");
+    const socket = io();
+
     const playerName = prompt("Введите своё имя:") || "Игрок";
     socket.emit("setName", playerName);
 
@@ -39,7 +43,6 @@
     let isExplainer = false;
     let timer = null;
     let timeLeft = 60;
-    let timerStarted = false;
 
     const teamDiv = document.getElementById("team");
     const scoreDiv = document.getElementById("score");
@@ -75,11 +78,7 @@
         correctBtn.disabled = true;
         skipBtn.disabled = true;
       }
-
-      if (!timerStarted && isExplainer) {
-        startTimer();
-        timerStarted = true;
-      }
+      startTimer();
     });
 
     socket.on("showWord", word => {
@@ -87,11 +86,11 @@
       wordDiv.classList.remove("hidden");
       correctBtn.disabled = false;
       skipBtn.disabled = false;
+      startTimer();
     });
 
     socket.on("turnEnded", nextTeam => {
       isExplainer = false;
-      timerStarted = false;
       wordDiv.textContent = "Ход команды " + (nextTeam === "red" ? "🔴" : "🔵");
       wordDiv.classList.add("hidden");
       correctBtn.disabled = true;
@@ -102,20 +101,16 @@
 
     socket.on("gameOver", data => {
       const { scores, winner, results } = data;
-      document.body.style.backgroundColor = winner === "red" ? "#ffe6e6" : (winner === "blue" ? "#e6f0ff" : "#fffbe6");
-      let winnerText = winner === "draw" ? "🤝 Ничья!" : `🎉 Победила команда ${winner === "red" ? "🔴" : "🔵"}!`;
-      let html = `<div class='winner'>${winnerText}</div>`;
-      html += `<p>Итоговый счёт: 🔴 ${scores.red} | 🔵 ${scores.blue}</p>`;
-      html += `<h3>Результаты игроков:</h3><ul>`;
-      for (let player of results) {
-        html += `<li><strong>${player.name}</strong> (${player.team === "red" ? "🔴" : "🔵"}):<br>
-          Угадал(а): ${player.guessed} слов<br>
-          Пропущено: ${player.skipped.length > 0 ? player.skipped.join(", ") : "-"}
-        </li><br>`;
-      }
-      html += `</ul>`;
-      resultsDiv.innerHTML = html;
-      resultsDiv.style.display = "block";
+      let winText = winner === "draw" ? "Ничья!" :
+        `Победила команда ${winner === "red" ? "🔴" : "🔵"}!`;
+
+      wordDiv.textContent = "Игра окончена!";
+      scoreDiv.textContent = `Итог: 🔴 ${scores.red} | 🔵 ${scores.blue}`;
+      resultsDiv.innerHTML = `<h3>${winText}</h3>` + results.map(r =>
+        `<p><b>${r.name}</b> (${r.team === "red" ? "🔴" : "🔵"})<br>
+         Угадано: ${r.guessed}<br>
+         Пропущенные: ${r.skipped.join(", ") || "-"}</p>`
+      ).join("");
     });
 
     startBtn.onclick = () => {
@@ -133,8 +128,7 @@
 
     restartBtn.onclick = () => {
       socket.emit("restartGame");
-      document.body.style.backgroundColor = "#f4f4f4";
-      resultsDiv.style.display = "none";
+      resultsDiv.innerHTML = "";
     };
 
     function startTimer() {
@@ -145,7 +139,6 @@
         timerDiv.textContent = "Таймер: " + timeLeft;
         if (timeLeft <= 0) {
           clearInterval(timer);
-          timerStarted = false;
           socket.emit("endTurn");
         }
       }, 1000);
