Исправлен фон и отображение формы входа

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>猜词游戏</title>
   <style>
     body {
@@ -9,7 +9,7 @@
       text-align: center;
       margin: 0;
       padding: 0;
-      background: linear-gradient(to bottom right, #2c3e50, #1abc9c);
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
       color: white;
     }
 
@@ -18,7 +18,12 @@
       margin: 1em 0 0.5em;
     }
 
-    #loginScreen, #gameScreen {
+    #loginScreen {
+      display: block;
+      padding: 2em;
+    }
+
+    #gameScreen {
       display: none;
       padding: 2em;
     }
