Исправлено отображение слова при старте объяснения

--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,9 @@
     socket.on("turnStarted", ({ team }) => {
       correctBtn.disabled = !isExplainer;
       skipBtn.disabled = !isExplainer;
-      wordDiv.textContent = isExplainer ? "" : "Ход команды " + (team === "red" ? "🔴" : "🔵");
+if (!isExplainer) {
+  wordDiv.textContent = "Ход команды " + (team === "red" ? "🔴" : "🔵");
+}
       startTimer();
     });
 
